Fixed the date stuff and aligned things nicer

--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -36,7 +36,7 @@
 .title a:hover,
 .title a:focus,
 .title a:active {
-  text-decoration: underline;
+  text-decoration: none;
 }
 
 .title {
